manifests/ingress-a76c.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "aaaaatiwarishubaks-b612"
    labels:
        app: "aaaaatiwarishubaks-b612"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: aaaaatiwarishubaksc02c-aaaaatiwarishubaks-b612.8f944e03c2724479b251.eastus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "aaaaatiwarishubaks-b612"
                servicePort: 8080
